Muestro conexion con la BD a traves de tabla Clientes. Agrego Acceso al login

--- a/tpc_equipo3a_inmobiliaria/tpc_equipo_3A.csproj
+++ b/tpc_equipo3a_inmobiliaria/tpc_equipo_3A.csproj
@@ -115,6 +115,8 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Css\Master.css" />
+    <Content Include="ContraseñaConfig.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -175,6 +177,13 @@
     </Compile>
     <Compile Include="Clientes.aspx.designer.cs">
       <DependentUpon>Clientes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ContraseñaConfig.aspx.cs">
+      <DependentUpon>ContraseñaConfig.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContraseñaConfig.aspx.designer.cs">
+      <DependentUpon>ContraseñaConfig.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
