--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Propiedad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ubicacion.cs" />
+    <Compile Include="Perfil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
