--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Compile Include="AgentesNegocio.cs" />
     <Compile Include="ClientesNegocio.cs" />
+    <Compile Include="PerfilesNegocio.cs" />
     <Compile Include="PropiedadesNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisitasNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccesoADatos\AccesoADatos.csproj">
